# telemetry

./: CONTRIBUTING.md  Makefile.am  NOTICE  configure.ac  rdk_build.sh  rdk_env.xml  telemetry2_0.path  telemetry2_0.service
config/: CcspDmLib.cfg  Default_T2_ReportProfile.json  T2Agent.cfg  TR181-T2-USGv2.XML
include/: telemetry2_0.h  telemetry_busmessage_sender.h
source/: Makefile.am  telemetry2_0.c
source/ELKLoggervick/: rdkloganalyzernohostname.conf
source/ELKLoggervick/ELKParts/: exportrdk.ndjson  rdkloganalyzer.conf
source/bulkdata/: Makefile.am  datamodel.c  datamodel.h  profile.c  profile.h  profilexconf.c  profilexconf.h  reportprofiles.c  reportprofiles.h  t2common.c  t2common.h  t2eventreceiver.c  t2eventreceiver.h  t2markers.c  t2markers.h
source/bulkdata/conf/: DCMresponse.txt
source/bulkdata/scripts/: autodownload_dcmconfig.sh
source/ccspinterface/: Makefile.am  busInterface.c  busInterface.h  ccspinterface.c  ccspinterface.h  rbusInterface.c  rbusInterface.h
source/commonlib/: Makefile.am  t2Shared_api.sh  telemetry_busmessage_internal.h  telemetry_busmessage_sender.c  telemetry_client.c
source/dcautil/: Makefile.am  dca.c  dca.h  dcacpu.c  dcajson.c  dcalist.c  dcalist.h  dcamem.c  dcaproc.c  dcautil.c  dcautil.h  legacyutils.c  legacyutils.h
source/httpsend/: Makefile.am  send.c
source/interChipHelper/: Makefile.am  interChipHelper.c  interChipHelper.h
source/interChipHelper/scripts/: interChipUtils.sh
source/nativeProtocolSimulator/: Makefile.am  t2rbusMethodProvider.c
source/protocol/: Makefile.am
source/protocol/http/: Makefile.am  curlinterface.c  curlinterface.h
source/protocol/rbusMethod/: Makefile.am  rbusmethodinterface.c  rbusmethodinterface.h
source/reportgen/: Makefile.am  reportgen.c  reportgen.h
source/scheduler/: Makefile.am  scheduler.c  scheduler.h
source/t2dm/: Makefile.am  cosa_apis.h  cosa_telemetry_dml.c  cosa_telemetry_dml.h  cosa_telemetry_internal.c  cosa_telemetry_internal.h  plugin_main.c  plugin_main.h  plugin_main_apis.c  plugin_main_apis.h
source/t2parser/: Makefile.am  t2parser.c  t2parser.h  t2parserxconf.c  t2parserxconf.h
source/t2ssp/: ssp_action.c  ssp_global.h  ssp_internal.h  ssp_main.c  ssp_messagebus_interface.c  ssp_messagebus_interface.h  t2_custom.h
source/test/: Makefile.am  gtest_main.cpp
source/test/dcautils/: dcautilTest.cpp
source/test/mocks/: FileioMock.cpp  FileioMock.h  SystemMock.cpp  SystemMock.h
source/test/protocol/: ProtocolTest.cpp
source/test/reportgen/: Makefile.am  gtest_main.cpp  reportgenMock.cpp  reportgenMock.h  reportgenTest.cpp
source/test/scheduler/: Makefile.am  gtest_main.cpp  schedulerTest.cpp
source/test/t2parser/: Makefile.am  gtest_main.cpp  rpInputfile.txt  t2parserTest.cpp  xconfInputfile.txt
source/test/utils/: UtilsTest.cpp
source/test/xconf-client/: Makefile.am  gtest_main.cpp  xconfclientTest.cpp
source/test/xconf-client/xconfclientMocks/: fileMock.cpp  fileMock.h
source/testApp/: Makefile.am  busInterfaceTests.c  busInterfaceTests.h  testApp.c  testCommonLibApi.c  testModules.c
source/utils/: Makefile.am  collection.c  collection.h  persistence.c  persistence.h  t2MtlsUtils.c  t2MtlsUtils.h  t2collection.c  t2collection.h  t2common.c  t2common.h  t2commonutils.c  t2commonutils.h  t2log_wrapper.c  t2log_wrapper.h  vector.c  vector.h
source/xconf-client/: Makefile.am  persistence.c  persistence.h  xconfclient.c  xconfclient.h
